# intern-2026Spring

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
backend/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_items_table.py
backend/app/: __init__.py  database.py  main.py  models.py  schemas.py
frontend/: .env.local.example  Dockerfile  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
