[project]
name = "backend-app"
version = "0.1.0"
description = "FastAPI backend application for intern development"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.1",
    "pymysql>=1.1.1",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.15",
]

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["B008", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
